src/objects/Project_Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Time Entries</relationshipLabel>
        <relationshipName>Project_Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <defaultValue>$User.FirstName +' '+ $User.LastName</defaultValue>
        <description>This field should contain the name of the CSR creating the entry.</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>MOD</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <inlineHelpText>For Time Spent the Unit of Measure is minutes.</inlineHelpText>
        <label>Time Spent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>This Custom object is for tracking time.</description>
    <label>Project Time Entry</label>
    <nameField>
        <label>Project Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>